# risk_mpc

./: .gitignore  .gitmodules  README.md  build.bash  join.bash  run.bash
clearpath/: robot.urdf.xacro
clearpath/manipulators/config/: moveit.yaml
clearpath/platform-extras/launch/: platform-extras-service.launch.py
clearpath/platform/config/: control.yaml  diagnostic_aggregator.yaml  diagnostic_updater.yaml  foxglove_bridge.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
clearpath/platform/launch/: platform-service.launch.py
negative-obstacle-detection/: Dockerfile
risk-mpc/: Dockerfile
ws/: record_data.sh  record_pipeline.sh  record_validate_risk.sh
ws/src/DecompROS2/decomp_ros_util/: CMakeLists.txt  package.xml
ws/src/DecompROS2/decomp_ros_util/include/decomp_ros_util/: data_ros_utils.hpp
ws/src/DecompROS2/decomp_rviz_plugins/: CMakeLists.txt  package.xml
ws/src/DecompROS2/decomp_rviz_plugins/include/decomp_rviz_plugins/: mesh_visual.hpp  polyhedron_array_display.hpp
ws/src/DecompROS2/decomp_rviz_plugins/src/: mesh_shape.cpp  mesh_visual.cpp
ws/src/DecompROS2/decomp_test_node/src/: test_path_decomp_3d.cpp
ws/src/Faster-LIO-ROS2/faster-lio/Log/: traj.txt
ws/src/Faster-LIO-ROS2/faster-lio/config/: ouster64.yaml
ws/src/Faster-LIO-ROS2/faster-lio/launch/: mapping_ouster64.launch.py
ws/src/Faster-LIO-ROS2/faster-lio/rviz_cfg/: loam_livox.rviz
ws/src/Faster-LIO-ROS2/faster-lio/src/: laser_mapping.cc  pointcloud_preprocess.cc
ws/src/jackal/jackal_control/: CMakeLists.txt
ws/src/jackal/jackal_control/config/: localization.yaml  teleop_logitech.yaml
ws/src/jackal/jackal_control/launch/: control.launch.py
ws/src/jackal/jackal_description/launch/: description.launch.py
ws/src/jackal/jackal_description/urdf/: jackal.urdf.xacro
ws/src/jackal/jackal_msgs/: CMakeLists.txt
ws/src/jackal/jackal_robot/: CMakeLists.txt  package.xml
ws/src/jackal/jackal_robot/include/jackal_hardware/: jackal_hardware.hpp  jackal_hardware_interface.hpp
ws/src/jackal/jackal_robot/jackal_robot/: diagnostics_updater
ws/src/jackal/jackal_robot/launch/: accessories.launch.py  bringup.launch.py  diagnostics.launch.py
ws/src/jackal/jackal_robot/src/: jackal_hardware.cpp  jackal_hardware_interface.cpp
ws/src/jackal_sim/: CMakeLists.txt  package.xml
ws/src/jackal_sim/src/: dummy_sim.cpp
ws/src/jackal_sim/srv/: SetGoal.srv
ws/src/mpc_controller/mpc_controller/: mpc_llc.py
ws/src/planning/: package.xml  setup.py
ws/src/planning/planning/: mpc_planner.py  mpc_planner_max_approx_constraints.py  mpc_planner_max_approx_cost.py  occupancy_grid_parser.py
